--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -35,6 +35,8 @@
       <section>
         <div id="player"></div>
       </section>
+      
+      <ul id="video-list"></ul>
     </main>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="main.js"></script>
